k8s-manifests/counsellor-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counsellor-service-deployment
  labels:
    app: counsellor-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: counsellor-service
  template:
    metadata:
      labels:
        app: counsellor-service
    spec:
      containers:
      - name: counsellor-service
        image: 779846807200.dkr.ecr.us-east-1.amazonaws.com/counsellor-service:latest
        ports:
        - containerPort: 5001
      imagePullSecrets:
      - name: regcred
