k8s-manifests/messaging-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-service-deployment
  labels:
    app: messaging-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-service
  template:
    metadata:
      labels:
        app: messaging-service
    spec:
      containers:
      - name: messaging-service
        image: 779846807200.dkr.ecr.us-east-1.amazonaws.com/messaging-service:latest
        ports:
        - containerPort: 5002
      imagePullSecrets:
      - name: regcred
