k8s-manifests/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  labels:
    app: user-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: 779846807200.dkr.ecr.us-east-1.amazonaws.com/user-service:latest
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: regcred
