k8s-manifests/backend.yaml
---
# user‑service Deployment + Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  labels:
    app: user-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: user-service
          image: 484139598244.dkr.ecr.eu-north-1.amazonaws.com/user-service:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort

---
# messaging-service Deployment + Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-service-deployment
  labels:
    app: messaging-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-service
  template:
    metadata:
      labels:
        app: messaging-service
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: messaging-service
          image: 484139598244.dkr.ecr.eu-north-1.amazonaws.com/user-service:latest
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
spec:
  selector:
    app: messaging-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5002
  type: NodePort

---
# counsellor-service Deployment + Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counsellor-service-deployment
  labels:
    app: counsellor-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: counsellor-service
  template:
    metadata:
      labels:
        app: counsellor-service
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: counsellor-service
          image: 484139598244.dkr.ecr.eu-north-1.amazonaws.com/user-service:latest
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: counsellor-service
spec:
  selector:
    app: counsellor-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: NodePort
