k8s-manifests/counsellor-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counsellor-service
spec:
  selector:
    app: counsellor-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: LoadBalancer
