k8s-manifests/messaging-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
spec:
  selector:
    app: messaging-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5002
  type: LoadBalancer
