k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - user.betterhealthservices.42web.io
    - messaging.betterhealthservices.42web.io
    - counsellor.betterhealthservices.42web.io
    secretName: tls-selfsigned
    
  rules:
  - host: user.betterhealthservices.42web.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
  - host: messaging.betterhealthservices.42web.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: messaging-service
            port:
              number: 80
  - host: counsellor.betterhealthservices.42web.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: counsellor-service
            port:
              number: 80
